:recycle: fixed container size when user is on mobile

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -27,6 +27,10 @@ body {
   position: relative;
   min-height: 100vh;
   padding: 0 8px 22px;
+
+  @media (max-width: 768px) {
+    max-width: 90%;
+  }
 }
 
 a {
@@ -57,4 +61,10 @@ p {
   font-family: "helvetica", "arial", sans-serif;
   line-height: 150%;
   font-size: 1.125rem;
+}
+
+.hide-sm {
+  @media (max-width: 768px) {
+    display: none;
+  }
 }
